Create draft 'Tower' and 'All towers' pages

--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -1,12 +1,12 @@
-<html>
+{% extends 'eda/base.html' %}
 
-<head>
-	<title>Ely DA Administration</title>
-</head>
+{% load static %}
 
-<body>
+{% block content %}
 
 <h1>Ely DA Administration</h1>
+
+<p>Under development - please ignore</p>
 
 <ul>
 	<li><a href="/admin">Site admin</a></li>
@@ -18,3 +18,4 @@
 
 </body>
 
+{% endblock %}
