--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -9,6 +9,21 @@
 <p>Under development - please ignore</p>
 
 <ul>
+	<li>Towers:
+		<ul>
+			<li><a href="{% url 'tower_list' %}">All towers</a></li>
+			<li><a href="{% url 'district_list' %}">All towers by district</a>
+				<uL>
+					<li><a href="{% url 'single_district_list' d='cambridge' %}">Just Cambridge</a></li>
+					<li><a href="{% url 'single_district_list' d='ely' %}">Just Ely</a></li>
+					<li><a href="{% url 'single_district_list' d='huntingdon' %}">Just Huntingdon</a></li>
+					<li><a href="{% url 'single_district_list' d='wisbech' %}">Just Wisbech</a></li>
+				</uL>
+			</li>
+			<li><a href="{% url 'bells_list' %}">Full-circle towers by number of bells</a></li>
+			<li><a href="{% url 'un_bells_list' %}">Non-ull-circle towers by number of bells</a></li>
+			<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
+		</ul>
 	<li><a href="/admin">Site admin</a></li>
 </ul>
 
