Tidied 'public' pages

--- a/eda/tower_database/templates/tower_database/practice_list.html
+++ b/eda/tower_database/templates/tower_database/practice_list.html
@@ -4,9 +4,15 @@
 
 {% block content %}
 
+<div class="row justify-content-center">
+
+    <div class="col-auto">
+
 <h1>{{ title }}</h1>
 
 <p>We believe our listsWe include all towers with 3 or more bells within the area of the Diocese of Ely (not all of which owned and maintained by the Diocese itself).</p>
+
+<p>Towers marked in <i>italic</i> should be checked before travelling. Bracketed notes indicate the week of the month of the practice.</p>
 
 <ul>
 
@@ -23,5 +29,9 @@
 	{% endfor %}
 
 </ul>
+
+</div>
+
+</div>
 
 {% endblock %}
