Add a note explaining 'not rung full-circle'

--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -21,7 +21,7 @@
 				</uL>
 			</li>
 			<li><a href="{% url 'bells_list' %}">Full-circle towers by number of bells</a></li>
-			<li><a href="{% url 'un_bells_list' %}">Non-ull-circle towers by number of bells</a></li>
+			<li><a href="{% url 'un_bells_list' %}">Non-full-circle towers by number of bells</a></li>
 			<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
 		</ul>
 	<li><a href="/admin">Site admin</a></li>
