--- a/eda/tower_database/templates/tower_database/tower_list.html
+++ b/eda/tower_database/templates/tower_database/tower_list.html
@@ -12,6 +12,10 @@
 
 <p>We believe our lists include all towers with 3 or more bells within the area of the Diocese of Ely (not all of which owned and maintained by the Diocese itself).</p>
 
+{% if notes %}
+<p>{{ notes }}</p>
+{% endif %}
+
       <table class="table table-responsive table-sm">
 
         <thead>
