--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -12,7 +12,7 @@
 	<li>Towers:
 		<ul>
 			<li><a href="{% url 'tower_list' %}">All towers</a></li>
-			<li><a href="{% url 'district_list' %}">All towers by district</a>
+			<li><a href="{% url 'district_list' %}">All towers by District</a>
 				<uL>
 					<li><a href="{% url 'single_district_list' d='cambridge' %}">Just Cambridge</a></li>
 					<li><a href="{% url 'single_district_list' d='ely' %}">Just Ely</a></li>
@@ -20,8 +20,8 @@
 					<li><a href="{% url 'single_district_list' d='wisbech' %}">Just Wisbech</a></li>
 				</uL>
 			</li>
-			<li><a href="{% url 'bells_list' %}">Full-circle towers by number of bells</a></li>
-			<li><a href="{% url 'un_bells_list' %}">Non-full-circle towers by number of bells</a></li>
+			<li><a href="{% url 'bells_list' %}">Towers rung full-circle, by number of bells</a></li>
+			<li><a href="{% url 'un_bells_list' %}">Towewrs not rung full-circle, by number of bells</a></li>
 			<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
 		</ul>
 	<li><a href="/admin">Site admin</a></li>
