Tidy index page

--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 
+<div class="row justify-content-center">
+
+    <div class="col-auto">
+
 <h1>Ely DA Administration</h1>
 
 <p>Under development - please ignore</p>
@@ -13,23 +17,29 @@
 		<ul>
 			<li><a href="{% url 'tower_list' %}">All towers</a></li>
 			<li><a href="{% url 'district_list' %}">All towers by District</a>
-				<uL>
+				<ul>
 					<li><a href="{% url 'single_district_list' d='cambridge' %}">Just Cambridge</a></li>
 					<li><a href="{% url 'single_district_list' d='ely' %}">Just Ely</a></li>
 					<li><a href="{% url 'single_district_list' d='huntingdon' %}">Just Huntingdon</a></li>
 					<li><a href="{% url 'single_district_list' d='wisbech' %}">Just Wisbech</a></li>
-				</uL>
+				</ul>
 			</li>
 			<li><a href="{% url 'bells_list' %}">Towers rung full-circle, by number of bells</a></li>
 			<li><a href="{% url 'un_bells_list' %}">Towewrs not rung full-circle, by number of bells</a></li>
 			<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
 		</ul>
+	</li>
 	<li><a href="/admin">Site admin</a></li>
 </ul>
 
 <address>
 	<p>Contact <a href="mailto:webmaster@elyda.org.uk">webmaster@elyda.org.uk</a></p>
 </address>
+
+</div>
+
+</div>
+
 
 </body>
 
