Assorted tidies and fixes

--- a/eda/eda/templates/eda/base.html
+++ b/eda/eda/templates/eda/base.html
@@ -8,7 +8,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EDA Admin</title>
+    <title>{% block title %}EDA Automation{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'eda/bootstrap.css' %}">
 
   </head>
