--- a/eda/tower_database/templates/tower_database/practice_list.html
+++ b/eda/tower_database/templates/tower_database/practice_list.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block content %}
 
 <div class="row justify-content-center">
