--- a/eda/eda/templates/eda/base.html
+++ b/eda/eda/templates/eda/base.html
@@ -11,6 +11,8 @@
     <title>{% block title %}EDA Automation{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'eda/bootstrap.css' %}">
 
+    {% block extra_head %}{% endblock %}
+
   </head>
 
   <body>
@@ -19,9 +21,9 @@
     {% block content %}{% endblock %}
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="{% static 'eda/bootstrap.bundle.js' %}"></script>
 
-  <script src="{% static 'eda/bootstrap.bundle.js' %}"></script>
+    {% block extra_js %}{% endblock %}
 
   </body>
 
