--- a/eda/eda/templates/eda/index.html
+++ b/eda/eda/templates/eda/index.html
@@ -18,6 +18,7 @@
 
 	<ul>
 		<li><a href="{% url 'tower_list' %}">All towers</a></li>
+		<li><a href="{% url 'tower_list_complex' %}">All towers, with filtering and sorting</a></li>
 		<li><a href="{% url 'district_list' %}">All towers by District</a>
 			<ul>
 				<li><a href="{% url 'single_district_list' d='cambridge' %}">Just Cambridge</a></li>
