--- a/eda/tower_database/static/tower_database/DataTables/datatables.css
+++ b/eda/tower_database/static/tower_database/DataTables/datatables.css
@@ -4,10 +4,10 @@
  *
  * To rebuild or modify this file with the latest versions of the included
  * software please visit:
- *   https://datatables.net/download/#bs5/jq-3.7.0/dt-2.3.5/b-3.2.5/sp-2.3.5/sl-3.1.3
+ *   https://datatables.net/download/#bs5/jq-3.7.0/dt-2.3.5/b-3.2.5/rg-1.6.0/sp-2.3.5/sl-3.1.3
  *
  * Included libraries:
- *   jQuery 3.7.0, DataTables 2.3.5, Buttons 3.2.5, SearchPanes 2.3.5, Select 3.1.3
+ *   jQuery 3.7.0, DataTables 2.3.5, Buttons 3.2.5, RowGroup 1.6.0, SearchPanes 2.3.5, Select 3.1.3
  */
 
 :root {
@@ -1033,6 +1033,80 @@ div.dt-button-info {
 :root[data-bs-theme=dark] div.dt-button-collection.fixed {
   background-color: var(--bs-body-bg);
   border: 1px solid var(--bs-border-color-translucent);
+}
+
+
+table.dataTable tr.dtrg-group th {
+  background-color: rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-0 th {
+  font-weight: bold;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-1 th,
+table.dataTable tr.dtrg-group.dtrg-level-2 th,
+table.dataTable tr.dtrg-group.dtrg-level-3 th,
+table.dataTable tr.dtrg-group.dtrg-level-4 th,
+table.dataTable tr.dtrg-group.dtrg-level-5 th {
+  background-color: rgba(0, 0, 0, 0.05);
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  padding-left: 2em;
+  font-size: 0.9em;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-2 th {
+  background-color: rgba(0, 0, 0, 0.01);
+  padding-left: 2.5em;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-3 th {
+  background-color: rgba(0, 0, 0, 0.01);
+  padding-left: 3em;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-4 th {
+  background-color: rgba(0, 0, 0, 0.01);
+  padding-left: 3.5em;
+}
+
+table.dataTable tr.dtrg-group.dtrg-level-5 th {
+  background-color: rgba(0, 0, 0, 0.01);
+  padding-left: 4em;
+}
+
+html.dark table.dataTable tr.dtrg-group th {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+html.dark table.dataTable tr.dtrg-group.dtrg-level-1 th {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+html.dark table.dataTable tr.dtrg-group.dtrg-level-2 th,
+html.dark table.dataTable tr.dtrg-group.dtrg-level-3 th,
+html.dark table.dataTable tr.dtrg-group.dtrg-level-4 th,
+html.dark table.dataTable tr.dtrg-group.dtrg-level-5 th {
+  background-color: rgba(255, 255, 255, 0.01);
+}
+
+table.dataTable.table-striped tr.dtrg-level-0 {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+table.dataTable.table-striped tr.dtrg-level-1 {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+table.dataTable.table-striped tr.dtrg-level-2,
+table.dataTable.table-striped tr.dtrg-level-3,
+table.dataTable.table-striped tr.dtrg-level-4,
+table.dataTable.table-striped tr.dtrg-level-5 {
+  background-color: rgba(0, 0, 0, 0.01);
+}
+table.dataTable.table-striped tr.dtrg-level-1 tr.dtrg-level-2 th,
+table.dataTable.table-striped tr.dtrg-level-3 th,
+table.dataTable.table-striped tr.dtrg-level-4 th,
+table.dataTable.table-striped tr.dtrg-level-5 th {
+  background-color: transparent;
 }
 
 
