Tidy GeoJSON links, add EDA Tower ID

--- a/eda/tower_database/templates/tower_database/index.html
+++ b/eda/tower_database/templates/tower_database/index.html
@@ -16,4 +16,4 @@
 		<li><a href="{% url 'practice_night_list' %}">Towers by practice night</a></li>
 	</ul>
 
-	<p>Also <a href="{% url 'towers_geojson' %}">All towers as GeoJSON</a>.</p>
+	<p>Also all towers as <a href="{% url 'towers_geojson' %}">machine-readable GeoJSON</a>.</p>
