Add a map link to the index

--- a/eda/tower_database/templates/tower_database/index.html
+++ b/eda/tower_database/templates/tower_database/index.html
@@ -1,6 +1,9 @@
 <h2>Tower Database</h2>
 
 	<ul>
+
+		<li><a href="{% url 'map' %}">Map</a></li>
+
 		<li><a href="{% url 'tower_list' %}">All towers</a></li>
 
 		<li><a href="{% url 'district_list' %}">All towers by District</a>
