Add per-DISTRICT GeoJson exports

--- a/eda/tower_database/templates/tower_database/index.html
+++ b/eda/tower_database/templates/tower_database/index.html
@@ -8,10 +8,10 @@
 
 		<li><a href="{% url 'district_list' %}">All towers by District</a>
 			<ul>
-				<li><a href="{% url 'single_district_list' d='cambridge' %}">Just Cambridge</a></li>
-				<li><a href="{% url 'single_district_list' d='ely' %}">Just Ely</a></li>
-				<li><a href="{% url 'single_district_list' d='huntingdon' %}">Just Huntingdon</a></li>
-				<li><a href="{% url 'single_district_list' d='wisbech' %}">Just Wisbech</a></li>
+				<li><a href="{% url 'single_district_list' d='C' %}">Just Cambridge</a></li>
+				<li><a href="{% url 'single_district_list' d='E' %}">Just Ely</a></li>
+				<li><a href="{% url 'single_district_list' d='H' %}">Just Huntingdon</a></li>
+				<li><a href="{% url 'single_district_list' d='W' %}">Just Wisbech</a></li>
 			</ul>
 		</li>
 		<li><a href="{% url 'bells_list' %}">Towers rung full-circle, by number of bells</a></li>
