--- a/eda/tower_database/templates/tower_database/tower_list.html
+++ b/eda/tower_database/templates/tower_database/tower_list.html
@@ -63,4 +63,8 @@
 
     </table>
 
+{% if district %}
+<p>This district as <a href="{% url 'district_geojson' district %}">machine-readable GeoJSON</a></p>
+{% endif %}
+
 {% endblock %}
