--- a/eda/tower_database/templates/tower_database/tower_detail.html
+++ b/eda/tower_database/templates/tower_database/tower_detail.html
@@ -69,8 +69,8 @@
 		<td>{{ tower.postcode }}</td>
 	</tr>
 	<tr>
-		<td class="fw-bold">Latitide, Longitude</td>
-		<td>{{ tower.lat }}, {{ tower.lng }} (<a href="https://www.google.com/maps/search/?api=1&query={{ tower.lat }},{{ tower.lng }}">Google</a>, <a href="https://www.openstreetmap.org/?mlat={{ tower.lat}}&mlon={{ tower.lng }}&zoom=16">OpenStreetMap</a>)</td>
+		<td class="fw-bold">Position</td>
+		<td>{{ tower.lat }}, {{ tower.lng }} (<a href="{% url 'tower_map' towerid=tower.pk %}">Map</a>, <a href="https://www.google.com/maps/search/?api=1&query={{ tower.lat }},{{ tower.lng }}">Google</a>)</td>
 	</tr>
 	<tr>
 		<td class="fw-bold">OS Grid</td>
